# cardiac_ccdaf

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: ci.yml
docs/: eam-real-data-verification.md
src/ccdaf/: __init__.py
src/ccdaf/app/: ccdaf.py  views.py
src/ccdaf/core/: __init__.py  eam_export.py  eam_loader.py  field_transfer.py  mesh_loader.py  mesh_postprocessor.py  region_tagger.py  seed_geometry.py  seed_io.py  seed_state_machine.py  segmentation.py
src/ccdaf/gui/: __init__.py  clipping_widget.py  eam_export_dialog.py  eam_load_dialog.py  field_select_dialog.py  manual_correction_widget.py  mapping_select_dialog.py  mesh_info_widget.py  postprocessing_widget.py  save_mesh_dialog.py  seed_widget.py  segmentation_widget.py  tagging_widget.py  visualisation_widget.py
src/ccdaf/interaction/: __init__.py  clipping_tool.py  manual_editor.py  seed_selector.py
src/ccdaf/io/: carto_functions.py  vtkfunctions.py
tests/: test_field_transfer.py  test_manual_editor.py  test_mesh_postprocessor.py  test_seed_geometry.py  test_seed_state_machine.py  test_smoothing_and_electrodes.py  test_views.py
tests/nightly/: README.md
tests/unit/: test_boundary_smoothing.py  test_bundle_io.py  test_clip_undo.py  test_field_transfer.py  test_headless_boundary.py  test_label_islands.py  test_manual_editor.py  test_mesh_postprocessor.py  test_relabel_halfspace.py  test_seed_geometry.py  test_seed_persistence.py  test_seed_state_machine.py  test_segmentation_core.py  test_smoothing_and_electrodes.py  test_snake_geodesic.py  test_views.py  test_vtk_nodata.py
