[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccdaf"
version = "0.1.0"
description = "Cardiac Clinical Data Analysis Framework"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    # Floors follow the validated stack (VTK 9.6.2 / pyvista 0.48.4); the two
    # 9.6-specific behaviours are handled in code, not avoided by pinning —
    # see environment.yml for the full reasoning. No exact pin on purpose.
    "vtk>=9.6",
    "pyvista>=0.48",
    "pyvistaqt>=0.11",
    "PyQt5>=5.15",
    "matplotlib>=3.7",
    "SimpleITK>=2.4",
    "trimesh>=4.0",
    # trimesh.fix_normals() needs networkx, which trimesh only declares as an
    # optional extra — decimate raises ModuleNotFoundError without it.
    "networkx>=3.0",
]

[project.scripts]
ccdaf = "ccdaf.app.ccdaf:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
