[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccdaf"
version = "0.1.0"
description = "Cardiac Clinical Data Analysis Framework"
readme = "README.md"
license = {file = "LICENSE"}
# Validated on Python 3.14; floored at 3.12 alongside the VTK/pyvista floors,
# below which the stack behaves differently (see environment.yml).
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    # Floors follow the validated stack (VTK 9.6.2 / pyvista 0.48.4); the two
    # 9.6-specific behaviours are handled in code, not avoided by pinning —
    # see environment.yml for the full reasoning. No exact pin on purpose.
    "vtk>=9.6",
    "pyvista>=0.48",
    "pyvistaqt>=0.11",
    "PyQt5>=5.15",
    "matplotlib>=3.7",
    "SimpleITK>=2.4",
    "trimesh>=4.0",
    # trimesh.fix_normals() needs networkx, which trimesh only declares as an
    # optional extra — decimate raises ModuleNotFoundError without it.
    "networkx>=3.0",
]

[project.scripts]
ccdaf = "ccdaf.app.ccdaf:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
# Tier-1: the synthetic, headless suite — the default collection, run in CI.
# Tier-2 lives under tests/nightly (empty for now) and is selected explicitly
# by a local runner against private Carto data.
testpaths = ["tests/unit"]
markers = [
    "nightly: real Carto-data regressions, run by a local/self-hosted runner",
]
